Added font awesome

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <div class="bg-warning">
       <h1 class="fw-bold">TESTING</h1>
       <p>Blah blah blah blah</p>
+      <i class="fa-brands fa-linkedin"></i>
     </div>
   </body>
 </html>
