--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>LJ Fryer</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -29,10 +29,27 @@
     ></script>
   </head>
   <body>
-    <div class="bg-warning">
-      <h1 class="fw-bold">TESTING</h1>
-      <p>Blah blah blah blah</p>
-      <i class="fa-brands fa-linkedin"></i>
+    <div class="hero">
+      <div class="hero-inner p-1 d-flex">
+        <div class="hero-text d-flex flex-column justify-content-center">
+          <div class="name-title"><h1>LJ FRYER</h1></div>
+          <div class="introduction">
+            <p>
+              An experienced teacher with a lifelong passion for STEM, I decided
+              to apply my attention to detail and problem solving skills to
+              becoming a Front End Developer. Starting my journey with SheCodes
+              ignited my passion for coding. Each SheCodes workshop culminates
+              in a final project that showcases the skills, languages, tools and
+              frameworks that bring me one step closer to creating aesthetically
+              pleasing user interfaces that are intuitive and responsive.
+            </p>
+          </div>
+        </div>
+        <img
+          src="/images/sydney-opera-house-circle-crop.png"
+          alt="Sydney Opera House"
+        />
+      </div>
     </div>
   </body>
 </html>
