--- a/index.html
+++ b/index.html
@@ -28,27 +28,115 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body>
-    <div class="hero">
-      <div class="hero-inner p-1 d-flex">
-        <div class="hero-text d-flex flex-column justify-content-center">
-          <div class="name-title"><h1>LJ FRYER</h1></div>
-          <div class="introduction">
-            <p>
-              An experienced teacher with a lifelong passion for STEM, I decided
-              to apply my attention to detail and problem solving skills to
-              becoming a Front End Developer. Starting my journey with SheCodes
-              ignited my passion for coding. Each SheCodes workshop culminates
-              in a final project that showcases the skills, languages, tools and
-              frameworks that bring me one step closer to creating aesthetically
-              pleasing user interfaces that are intuitive and responsive.
+  <body class="mb-5">
+    <div class="container">
+      <div class="hero">
+        <div class="hero-inner d-flex">
+          <div class="hero-text d-flex flex-column justify-content-center">
+            <div class="name-title"><h1>LJ FRYER</h1></div>
+            <div class="introduction">
+              <p>
+                An experienced teacher with a lifelong passion for STEM, I
+                decided to apply my attention to detail and problem solving
+                skills to becoming a Front End Developer. Starting my journey
+                with SheCodes ignited my passion for coding. Each SheCodes
+                workshop culminates in a final project that showcases the
+                skills, languages, tools and frameworks that bring me one step
+                closer to creating aesthetically pleasing user interfaces that
+                are intuitive and responsive.
+              </p>
+            </div>
+          </div>
+          <img
+            src="/images/sydney-opera-house-circle-crop.png"
+            class="img-fluid hero-image"
+            alt="Sydney Opera House"
+          />
+        </div>
+      </div>
+      <h3 class="text-center p-5 light-text">A sample of my projects</h3>
+      <div class="row">
+        <div class="col-sm-4 project-slides">
+          <img
+            src="/images/weather-app-img.png"
+            class="project-image img-fluid"
+            alt="LJ Fryer Weather App"
+          />
+          <div class="project-description">
+            <h2 class="light-text">Weather Project</h2>
+            <p class="mb-5">
+              My first interactive application, I added GitHub, hosting and API
+              integration to my developer toolbox. This app employs ES6,
+              integrating a search engine, functions to extract data from the
+              API and string interpolation to deliver a live, five day weather
+              forecast.
+              <br />
+              <br />
+              Click below to check the weather in your area.
             </p>
+            <div>
+              <a
+                href="https://weather-app-ljf.netlify.app/"
+                class="project-link"
+                >Your Weather Forecast</a
+              >
+            </div>
           </div>
         </div>
-        <img
-          src="/images/sydney-opera-house-circle-crop.png"
-          alt="Sydney Opera House"
-        />
+        <div class="col-sm-4 project-slides">
+          <img
+            src="/images/ai-poem-generator-img.png"
+            class="project-image img-fluid"
+            alt="LJ Fryer Weather App"
+          />
+          <div class="project-description">
+            <h2 class="light-text">AI Poem Generator</h2>
+            <p class="mb-5">
+              This project gave me an introduction to AI prompt engineering. The
+              mission was to build an interactive text generator using Axios and
+              the SheCodes AI API. Including animations utilising JS plugin and
+              CSS @keyframes rule, this app was a fun build.
+              <br />
+              <br />
+              Click below to try it out.
+            </p>
+            <div>
+              <a
+                href="https://www.shecodes.io/cohorts/2203/projects/2466767?_gl=1*1hq72fe*_gcl_au*MTAxMzM5NjkwNy4xNzM0NDEzMDIx"
+                target="_blank"
+                class="project-link"
+                >A poem for you</a
+              >
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4 project-slides">
+          <img
+            src="/images/pole-page-img.png"
+            class="project-image img-fluid"
+            alt="Pole dance project"
+          />
+          <div class="project-description">
+            <h2 class="light-text">Pole Dance Project</h2>
+            <p class="mb-5">
+              Using developer tool VS Code, I built a HTML landing page
+              featuring CSS grids, transform properties and a linear gradient.
+              JavaScript class manipulation allowed me to create a light/dark
+              theme option on the page. Hover image for dark theme.
+              <br />
+              <br />
+              Click below to view the page.
+            </p>
+            <div>
+              <a
+                href="https://www.shecodes.io/cohorts/1936/projects/2443518?_gl=1*hmg0f*_gcl_au*MTAxMzM5NjkwNy4xNzM0NDEzMDIx"
+                target="_blank"
+                class="project-link"
+                >My passion project</a
+              >
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
