--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
           />
         </div>
       </div>
-      <h3 class="text-center p-5 light-text">A sample of my projects</h3>
+      <h3 class="text-center p-2 mt-3 mb-3 light-text">
+        A sample of my projects
+      </h3>
       <div class="row">
         <div class="col-sm-4 project-slides">
           <img
