Styled homepage content, added @media queries and BootsStrap classes for responsive interface

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="container">
       <div class="hero">
         <div class="hero-inner d-flex">
-          <div class="hero-text d-flex flex-column justify-content-center">
+          <div class="hero-text d-flex flex-column">
             <div class="name-title"><h1>LJ FRYER</h1></div>
             <div class="introduction">
               <p>
@@ -52,90 +52,106 @@
             class="img-fluid hero-image"
             alt="Sydney Opera House"
           />
-        </div>
       </div>
       <h3 class="text-center p-2 mt-3 mb-3 light-text">
         A sample of my projects
       </h3>
-      <div class="row">
-        <div class="col-sm-4 project-slides">
-          <img
-            src="/images/weather-app-img.png"
-            class="project-image img-fluid"
-            alt="LJ Fryer Weather App"
-          />
-          <div class="project-description">
-            <h2 class="light-text">Weather Project</h2>
-            <p class="mb-5">
-              My first interactive application, I added GitHub, hosting and API
-              integration to my developer toolbox. This app employs ES6,
-              integrating a search engine, functions to extract data from the
-              API and string interpolation to deliver a live, five day weather
-              forecast.
-              <br />
-              <br />
-              Click below to check the weather in your area.
-            </p>
-            <div>
-              <a
-                href="https://weather-app-ljf.netlify.app/"
-                class="project-link"
-                >Your Weather Forecast</a
-              >
+      <div class="homepage">
+        <div class="row">
+          <div class="col-lg-4">
+            <div class="project-slides">
+              <img
+                src="/images/weather-app-img.png"
+                class="project-image img-fluid"
+                alt="LJ Fryer Weather App"
+              />
+              <div class="project-description">
+                <div>
+                  <h2 class="light-text">Weather Project</h2>
+                  <p class="mb-5">
+                    My first interactive application, I added GitHub, hosting
+                    and API integration to my developer toolbox. This app
+                    employs ES6, integrating a search engine, functions to
+                    extract data from the API and string interpolation to
+                    deliver a live, five day weather forecast.
+                    <br />
+                    <br />
+                    Click to check the weather in your area.
+                  </p>
+                </div>
+                <div>
+                  <a
+                    href="https://weather-app-ljf.netlify.app/"
+                    target="_blank"
+                    class="project-link"
+                    >Weather Forecast</a
+                  >
+                  <br />
+                </div>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col-sm-4 project-slides">
-          <img
-            src="/images/ai-poem-generator-img.png"
-            class="project-image img-fluid"
-            alt="LJ Fryer Weather App"
-          />
-          <div class="project-description">
-            <h2 class="light-text">AI Poem Generator</h2>
-            <p class="mb-5">
-              This project gave me an introduction to AI prompt engineering. The
-              mission was to build an interactive text generator using Axios and
-              the SheCodes AI API. Including animations utilising JS plugin and
-              CSS @keyframes rule, this app was a fun build.
-              <br />
-              <br />
-              Click below to try it out.
-            </p>
-            <div>
-              <a
-                href="https://www.shecodes.io/cohorts/2203/projects/2466767?_gl=1*1hq72fe*_gcl_au*MTAxMzM5NjkwNy4xNzM0NDEzMDIx"
-                target="_blank"
-                class="project-link"
-                >A poem for you</a
-              >
+          <div class="col-lg-4">
+            <div class="project-slides">
+              <img
+                src="/images/ai-poem-generator-img.png"
+                class="project-image img-fluid"
+                alt="LJ Fryer Weather App"
+              />
+              <div class="project-description">
+                <div>
+                  <h2 class="light-text">AI Poem Generator</h2>
+                  <p class="mb-5">
+                    This project gave me an introduction to AI prompt
+                    engineering. The mission was to build an interactive text
+                    generator using Axios and the SheCodes AI API. Including
+                    animations utilising JS plugin and CSS @keyframes rule, this
+                    app was a fun build.
+                    <br />
+                    <br />
+                    Click to try it out.
+                  </p>
+                </div>
+                <div>
+                  <a
+                    href="https://www.shecodes.io/cohorts/2203/projects/2466767?_gl=1*1hq72fe*_gcl_au*MTAxMzM5NjkwNy4xNzM0NDEzMDIx"
+                    target="_blank"
+                    class="project-link"
+                    >AI poem for you</a
+                  >
+                  <br />
+                </div>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col-sm-4 project-slides">
-          <img
-            src="/images/pole-page-img.png"
-            class="project-image img-fluid"
-            alt="Pole dance project"
-          />
-          <div class="project-description">
-            <h2 class="light-text">Pole Dance Project</h2>
-            <p class="mb-5">
-              Using developer tool VS Code, I built a HTML landing page
-              featuring CSS grids, transform properties and a linear gradient.
-              JavaScript class manipulation allowed me to create a light/dark
-              theme option on the page. Hover image for dark theme.
-              <br />
-              <br />
-              Click below to view the page.
-            </p>
-            <div>
-              <a
-                href="https://www.shecodes.io/cohorts/1936/projects/2443518?_gl=1*hmg0f*_gcl_au*MTAxMzM5NjkwNy4xNzM0NDEzMDIx"
-                target="_blank"
-                class="project-link"
-                >My passion project</a
-              >
+          <div class="col-lg-4">
+            <div class="project-slides">
+              <img
+                src="/images/pole-page-img.png"
+                class="project-image img-fluid"
+                alt="Pole dance project"
+              />
+              <div class="project-description">
+                <h2 class="light-text">Pole Dance Project</h2>
+                <p class="mb-5">
+                  Using developer tool VS Code, I built a HTML landing page
+                  featuring CSS grids, transform properties and a linear
+                  gradient. JavaScript class manipulation allowed me to create a
+                  light/dark theme option on the page. Hover image for dark
+                  theme.
+                  <br />
+                  <br />
+                  Click to view the page.
+                </p>
+                <div>
+                  <a
+                    href="https://www.shecodes.io/cohorts/1936/projects/2443518?_gl=1*hmg0f*_gcl_au*MTAxMzM5NjkwNy4xNzM0NDEzMDIx"
+                    target="_blank"
+                    class="project-link"
+                    >passion project</a
+                  ><br />
+                </div>
+              </div>
             </div>
           </div>
         </div>
