Added index.js file, tweaked styling

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                   Using developer tool VS Code, I built a HTML landing page
                   featuring CSS grids, transform properties and a linear
                   gradient. JavaScript class manipulation allowed me to create a
-                  light/dark theme option on the page. Hover image for dark
+                  light/dark theme option on the page. Click image for dark
                   theme.
                   <br />
                   <br />
@@ -157,5 +157,6 @@
         </div>
       </div>
     </div>
+    <script src="/src/index.js"></script>
   </body>
 </html>
