Created about me page, basic HTML structure and styling

--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
   <body class="mb-5">
     <div class="container">
       <div class="hero">
+        <a href="/about.html">About Me</a>
         <div class="hero-inner d-flex">
           <div class="hero-text d-flex flex-column">
             <div class="name-title"><h1>LJ FRYER</h1></div>
-            <div class="introduction">
+            <div class="hero-paragraph">
               <p>
                 An experienced teacher with a lifelong passion for STEM, I
                 decided to apply my attention to detail and problem solving
@@ -48,12 +49,12 @@
             </div>
           </div>
           <img
-            src="/images/sydney-opera-house-circle-crop.png"
-            class="img-fluid hero-image"
-            alt="Sydney Opera House"
-          />
+        src="/images/profile-picture-sqr.png"
+        alt="LJ Fryer"
+        class="img-fluid hero-image"
+      />
       </div>
-      <h3 class="text-center p-2 mt-3 mb-3 light-text">
+      <h3 class="text-center p-2 mt-3 mb-3">
         A sample of my projects
       </h3>
       <div class="homepage">
