Added toolkit section to about.html. Wrapped file and email logos in anchor links.

--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
     ></script>
   </head>
   <body>
-    <main>
+    <main class="mb-5">
       <div class="container">
         <a href="/index.html">Home</a>
         <div class="about-inner d-flex">
@@ -57,14 +57,44 @@
           </div>
         </div>
         <div class="personal-links mb-5 d-flex justify-content-center">
-          <a href="#"> <i class="fa-regular fa-file"></i></a>
-          <a href="#"><i class="fa-regular fa-envelope"></i></a>
+          <a href="#" title="My Projects">
+            <i class="fa-regular fa-file"></i
+          ></a>
+          <a href="#" title="Email me"
+            ><i class="fa-regular fa-envelope"></i
+          ></a>
         </div>
         <div class="toolkit">
-          <h2 class="text-center">
+          <h2 class="text-center mb-5">
             My Toolkit <i class="fa-solid fa-laptop"></i>
           </h2>
-          <div class="logos"></div>
+          <div class="toolkit-container">
+            <div class="toolkit d-flex mb-5">
+              <img src="/logos/html-icon.png" alt="HTML 5" />
+              <img src="/logos/css-icon.png" alt="CSS" />
+              <img src="/logos/javascript-icon.png" alt="JavaScript" />
+              <img src="/logos/bootstrap-icon.png" alt="BootStrap Framework" />
+              <img
+                src="/logos/api-icon.png"
+                alt="API Application Programming Interface"
+              />
+              <img
+                src="/logos/seo-icon.png"
+                alt="SEO Search Engine Optimisation"
+              />
+            </div>
+            <div class="toolkit d-flex">
+              <img src="/logos/vs-code-editor-icon.png" alt="VS Code Editor" />
+              <img src="/logos/git-icon.png" alt="Git Repositories" />
+              <img src="/logos/github-icon.svg" alt="GitHub" />
+              <img src="/logos/hosting-icon.png" alt="Hosting" />
+              <img src="/logos/ai-icon.png" alt="AI Prompt Engineering" />
+              <img
+                src="/logos/responsive-icon.png"
+                alt="Responsive Interfaces"
+              />
+            </div>
+          </div>
         </div>
       </div>
     </main>
