Added img-fluid to logos. Tweaked toolkit-container background

--- a/about.html
+++ b/about.html
@@ -70,28 +70,59 @@
           </h2>
           <div class="toolkit-container">
             <div class="toolkit d-flex mb-5">
-              <img src="/logos/html-icon.png" alt="HTML 5" />
-              <img src="/logos/css-icon.png" alt="CSS" />
-              <img src="/logos/javascript-icon.png" alt="JavaScript" />
-              <img src="/logos/bootstrap-icon.png" alt="BootStrap Framework" />
+              <img src="/logos/html-icon.png" alt="HTML 5" class="img-fluid" />
+              <img src="/logos/css-icon.png" alt="CSS" class="img-fluid" />
+              <img
+                src="/logos/javascript-icon.png"
+                alt="JavaScript"
+                class="img-fluid"
+              />
+              <img
+                src="/logos/bootstrap-icon.png"
+                alt="BootStrap Framework"
+                class="img-fluid"
+              />
               <img
                 src="/logos/api-icon.png"
                 alt="API Application Programming Interface"
+                class="img-fluid"
               />
               <img
                 src="/logos/seo-icon.png"
                 alt="SEO Search Engine Optimisation"
+                class="img-fluid"
               />
             </div>
             <div class="toolkit d-flex">
-              <img src="/logos/vs-code-editor-icon.png" alt="VS Code Editor" />
-              <img src="/logos/git-icon.png" alt="Git Repositories" />
-              <img src="/logos/github-icon.svg" alt="GitHub" />
-              <img src="/logos/hosting-icon.png" alt="Hosting" />
-              <img src="/logos/ai-icon.png" alt="AI Prompt Engineering" />
+              <img
+                src="/logos/vs-code-editor-icon.png"
+                alt="VS Code Editor"
+                class="img-fluid"
+              />
+              <img
+                src="/logos/git-icon.png"
+                alt="Git Repositories"
+                class="img-fluid"
+              />
+              <img
+                src="/logos/github-icon.svg"
+                alt="GitHub"
+                class="img-fluid"
+              />
+              <img
+                src="/logos/hosting-icon.png"
+                alt="Hosting"
+                class="img-fluid"
+              />
+              <img
+                src="/logos/ai-icon.png"
+                alt="AI Prompt Engineering"
+                class="img-fluid"
+              />
               <img
                 src="/logos/responsive-icon.png"
                 alt="Responsive Interfaces"
+                class="img-fluid"
               />
             </div>
           </div>
