Updated styling  and made about page responsive

--- a/about.html
+++ b/about.html
@@ -31,8 +31,8 @@
   <body>
     <main class="mb-5">
       <div class="container">
-        <a href="/index.html">Home</a>
-        <div class="about-inner d-flex">
+        <a href="/index.html" class="temp-link">Home</a>
+        <div class="about-page-inner d-flex">
           <img
             src="/images/trapeze-image.png"
             alt="LJ Fryer hanging from trapeze"
@@ -60,7 +60,7 @@
           <a href="#" title="My Projects">
             <i class="fa-regular fa-file"></i
           ></a>
-          <a href="#" title="Email me"
+          <a href="mailto:lj.fryer.001@gmail.com" title="Email me"
             ><i class="fa-regular fa-envelope"></i
           ></a>
         </div>
@@ -127,6 +127,8 @@
             </div>
           </div>
         </div>
+        <br />
+        <br />
       </div>
     </main>
   </body>
