--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <body class="mb-5">
     <div class="container">
       <div class="hero">
-        <a href="/about.html">About Me</a>
+        <a href="/about.html" class="temp-link">About Me</a>
         <div class="hero-inner d-flex">
           <div class="hero-text d-flex flex-column">
             <div class="name-title"><h1>LJ FRYER</h1></div>
