Added titles to toolkit images

--- a/about.html
+++ b/about.html
@@ -64,66 +64,147 @@
             ><i class="fa-regular fa-envelope"></i
           ></a>
         </div>
+
         <div class="toolkit">
-          <h2 class="text-center mb-5">
+          <div class="text-center mb-3">
+            <i class="fa-solid fa-chevron-down down-icon"></i>
+          </div>
+          <br />
+          <br />
+          <h2 class="toolkit-title text-center mb-5">
             My Toolkit <i class="fa-solid fa-laptop"></i>
           </h2>
+
           <div class="toolkit-container">
             <div class="toolkit d-flex mb-5">
-              <img src="/logos/html-icon.png" alt="HTML 5" class="img-fluid" />
-              <img src="/logos/css-icon.png" alt="CSS" class="img-fluid" />
-              <img
-                src="/logos/javascript-icon.png"
-                alt="JavaScript"
-                class="img-fluid"
-              />
-              <img
-                src="/logos/bootstrap-icon.png"
-                alt="BootStrap Framework"
-                class="img-fluid"
-              />
-              <img
-                src="/logos/api-icon.png"
-                alt="API Application Programming Interface"
-                class="img-fluid"
-              />
-              <img
-                src="/logos/seo-icon.png"
-                alt="SEO Search Engine Optimisation"
-                class="img-fluid"
-              />
+              <ul class="skills">
+                <li class="mb-3 text-center">
+                  <img
+                    src="/logos/html-icon.png"
+                    alt="HTML 5"
+                    class="img-fluid"
+                  />
+                </li>
+                <li class="skills-text text-center">HTML</li>
+              </ul>
+
+              <ul class="skills">
+                <li class="mb-3 text-center">
+                  <img src="/logos/css-icon.png" alt="CSS" class="img-fluid" />
+                </li>
+                <li class="skills-text text-center">CSS</li>
+              </ul>
+
+              <ul class="skills">
+                <li class="mb-3 text-center">
+                  <img
+                    src="/logos/javascript-icon.png"
+                    alt="JavaScript"
+                    class="img-fluid"
+                  />
+                </li>
+                <li class="skills-text text-center">JavaScript</li>
+              </ul>
+
+              <ul class="skills">
+                <li class="mb-3 text-center">
+                  <img
+                    src="/logos/bootstrap-icon.png"
+                    alt="BootStrap Framework"
+                    class="img-fluid"
+                  />
+                </li>
+                <li class="skills-text text-center">Bootstrap</li>
+              </ul>
+
+              <ul class="skills">
+                <li class="mb-3 text-center">
+                  <img
+                    src="/logos/api-icon.png"
+                    alt="API Application Programming Interface"
+                    class="img-fluid"
+                  />
+                </li>
+                <li class="skills-text text-center">API</li>
+              </ul>
+
+              <ul class="skills">
+                <li class="mb-3 text-center">
+                  <img
+                    src="/logos/seo-icon.png"
+                    alt="SEO Search Engine Optimisation"
+                    class="img-fluid"
+                  />
+                </li>
+                <li class="skills-text text-center">SEO</li>
+              </ul>
             </div>
             <div class="toolkit d-flex">
-              <img
-                src="/logos/vs-code-editor-icon.png"
-                alt="VS Code Editor"
-                class="img-fluid"
-              />
-              <img
-                src="/logos/git-icon.png"
-                alt="Git Repositories"
-                class="img-fluid"
-              />
-              <img
-                src="/logos/github-icon.svg"
-                alt="GitHub"
-                class="img-fluid"
-              />
-              <img
-                src="/logos/hosting-icon.png"
-                alt="Hosting"
-                class="img-fluid"
-              />
-              <img
-                src="/logos/ai-icon.png"
-                alt="AI Prompt Engineering"
-                class="img-fluid"
-              />
-              <img
-                src="/logos/responsive-icon.png"
-                alt="Responsive Interfaces"
-                class="img-fluid"
-              />
+              <ul class="skills">
+                <li class="mb-3 text-center">
+                  <img
+                    src="/logos/vs-code-editor-icon.png"
+                    alt="VS Code Editor"
+                    class="img-fluid"
+                  />
+                </li>
+                <li class="skills-text text-center">VS Code</li>
+              </ul>
+
+              <ul class="skills">
+                <li class="mb-3 text-center">
+                  <img
+                    src="/logos/git-icon.png"
+                    alt="Git Repositories"
+                    class="img-fluid"
+                  />
+                </li>
+                <li class="skills-text text-center">Git</li>
+              </ul>
+
+              <ul class="skills">
+                <li class="mb-3 text-center">
+                  <img
+                    src="/logos/github-icon.svg"
+                    alt="GitHub"
+                    class="img-fluid"
+                  />
+                </li>
+                <li class="skills-text text-center">GitHub</li>
+              </ul>
+
+              <ul class="skills">
+                <li class="mb-3 text-center">
+                  <img
+                    src="/logos/hosting-icon.png"
+                    alt="Hosting"
+                    class="img-fluid"
+                  />
+                </li>
+                <li class="skills-text text-center">Hosting</li>
+              </ul>
+
+              <ul class="skills">
+                <li class="mb-3 text-center">
+                  <img
+                    src="/logos/ai-icon.png"
+                    alt="AI Prompt Engineering"
+                    class="img-fluid"
+                  />
+                </li>
+                <li class="skills-text text-center">AI</li>
+              </ul>
+
+              <ul class="skills">
+                <li class="mb-3 text-center">
+                  <img
+                    src="/logos/responsive-icon.png"
+                    alt="Responsive Interfaces"
+                    class="img-fluid"
+                  />
+                </li>
+                <li class="skills-text text-center">Responsive</li>
+              </ul>
             </div>
           </div>
         </div>
