--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               />
               <div class="project-description">
                 <div>
-                  <h2 class="light-text">Weather Project</h2>
+                  <h2>Weather Project</h2>
                   <p class="mb-5">
                     My first interactive application, I added GitHub, hosting
                     and API integration to my developer toolbox. This app
@@ -101,7 +101,7 @@
               />
               <div class="project-description">
                 <div>
-                  <h2 class="light-text">AI Poem Generator</h2>
+                  <h2>AI Poem Generator</h2>
                   <p class="mb-5">
                     This project gave me an introduction to AI prompt
                     engineering. The mission was to build an interactive text
@@ -133,7 +133,7 @@
                 alt="Pole dance project"
               />
               <div class="project-description">
-                <h2 class="light-text">Pole Dance Project</h2>
+                <h2>Pole Dance Project</h2>
                 <p class="mb-5">
                   Using developer tool VS Code, I built a HTML landing page
                   featuring CSS grids, transform properties and a linear
