Made about me section on about page responsive

--- a/about.html
+++ b/about.html
@@ -31,31 +31,35 @@
   <body>
     <main class="mb-5">
       <div class="container">
-        <a href="/index.html" class="temp-link">Home</a>
-        <div class="about-page-inner d-flex">
-          <img
-            src="/images/trapeze-image.png"
-            alt="LJ Fryer hanging from trapeze"
-            class="img-fluid about-image"
-          />
-          <div class="about-text d-flex flex-column">
-            <div class="about-title">
-              <h1>ABOUT ME</h1>
-            </div>
-            <div class="about-paragraph">
-              <p>
-                !Dummy text - An experienced teacher with a lifelong passion for
-                STEM, I decided to apply my attention to detail and problem
-                solving skills to becoming a Front End Developer. Starting my
-                journey with SheCodes ignited my passion for coding. Each
-                SheCodes workshop culminates in a final project that showcases
-                the skills, languages, tools and frameworks that bring me one
-                step closer to creating aesthetically pleasing user interfaces
-                that are intuitive and responsive.
-              </p>
+        <div class="about-me">
+          <a href="/index.html" class="temp-link">Home</a>
+          <div class="about-me-inner d-flex">
+              <img
+                src="/images/trapeze-image.png"
+                alt="LJ Fryer hanging from trapeze"
+                class="img-fluid about-me-image"
+              />
+              <div class="about-me-text d-flex flex-column">
+                <div>
+                  <h1>ABOUT ME</h1>
+                </div>
+                <div class="about-me-paragraph">
+                  <p>
+                    !Dummy text - An experienced teacher with a lifelong passion
+                    for STEM, I decided to apply my attention to detail and
+                    problem solving skills to becoming a Front End Developer.
+                    Starting my journey with SheCodes ignited my passion for
+                    coding. Each SheCodes workshop culminates in a final project
+                    that showcases the skills, languages, tools and frameworks
+                    that bring me one step closer to creating aesthetically
+                    pleasing user interfaces that are intuitive and responsive.
+                  </p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
+
         <div class="personal-links mb-5 d-flex justify-content-center">
           <a href="#" title="My Projects">
             <i class="fa-regular fa-file"></i
@@ -64,18 +68,17 @@
             ><i class="fa-regular fa-envelope"></i
           ></a>
         </div>
-
-        <div class="toolkit">
           <div class="text-center mb-3">
             <i class="fa-solid fa-chevron-down down-icon"></i>
           </div>
           <br />
           <br />
+        <div>
           <h2 class="toolkit-title text-center mb-5">
             My Toolkit <i class="fa-solid fa-laptop"></i>
           </h2>
 
-          <div class="toolkit-container">
+          <div class="skills-container">
             <div class="toolkit d-flex mb-5">
               <ul class="skills">
                 <li class="mb-3 text-center">
@@ -206,6 +209,7 @@
                 <li class="skills-text text-center">Responsive</li>
               </ul>
             </div>
+            
           </div>
         </div>
         <br />
