--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <a href="/about.html" class="temp-link">About Me</a>
         <div class="hero-inner d-flex">
           <div class="hero-text d-flex flex-column">
-            <div class="name-title"><h1>LJ FRYER</h1></div>
+            <div><h1 class="name-title">LJ FRYER</h1></div>
             <div class="hero-paragraph">
               <p>
                 An experienced teacher with a lifelong passion for STEM, I
@@ -49,14 +49,13 @@
             </div>
           </div>
           <img
-        src="/images/profile-picture-sqr.png"
-        alt="LJ Fryer"
-        class="img-fluid hero-image"
-      />
+            src="/images/profile-picture-sqr.png"
+            alt="LJ Fryer"
+            class="img-fluid hero-image"
+          />
+        </div>
       </div>
-      <h3 class="text-center p-2 mt-3 mb-3">
-        A sample of my projects
-      </h3>
+      <h3 class="text-center p-2 mt-3 mb-3">A sample of my projects</h3>
       <div class="homepage">
         <div class="row">
           <div class="col-lg-4">
